public/css/styles.css
/*SnappMobile */

/*September 2018*/

/* Reset default*/

html,
body,
div,
span,
object,
iframe,
/*h1,
h2,
h3,
h4,
h5,
h6,*/
p,
blockquote,
a,
abbr,
address,
aside,
dfn,
em,
img,
small,
strike,
strong,
sub,
sup,
var,
b,
i,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
tr,
th,
td,
article,
canvas,
details,
figure,
figcaption,
footer,
header,
menu,
nav,
output,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
menu,
nav,
section {
    display: block;
}

/*drop down menu (mobile)*/
.modal-container {
    padding-top: 0;
    position: relative;
    top: -15px;
    width: auto;
    height: 100%;
    display: none;
}
.modal-container .modal-btn {
    display: contents;
    margin: 10px auto;
    color: var(--white-color);
    line-height: 50px;
    width: 42px;
    height: 42px;
    border: 0;
    border-radius: 50px;
    cursor: pointer;
    text-align: center;
}
.modal-btn {
    border-radius: 50px;
}
.modal-btn img {
    margin-top: 20px;
}
.modal-container .modal-content, .modal-container .modal-backdrop {
    height: 0;
    width: 0;
    opacity: 0;
    visibility: hidden;
    overflow: hidden;
    cursor: pointer;
    transition: opacity 0.2s ease-in;
}
.modal-container .modal-close {
    color: var(--white-color);
    position: absolute;
    right: 5px;
    top: 5px;
    padding-top: 3px;
    background:  var(--modal-color);
    font-size: 16px;
    width: 25px;
    height: 25px;
    font-weight: bold;
    text-align: center;
    cursor: pointer;
}
.modal-container .modal-close:hover {
    color: var(--modal-backdrop);
}
.modal-container #modal-toggle {
    display: none;
}
.modal-container #modal-toggle.active ~ .modal-backdrop, .modal-container #modal-toggle:checked ~ .modal-backdrop {
    background-color: rgba(0, 0, 0, 0.2);
    width: 100%;
    height: 100%;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 9;
    visibility: visible;
    opacity: 1;
    transition: opacity 0.2s ease-in;
}
.modal-container #modal-toggle.active ~ .modal-content, .modal-container #modal-toggle:checked ~ .modal-content {
    opacity: 1;
    border-radius: 8px;
    box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.1);
    background-color: var(--modal-color);
    max-width: 100%;
    width: 325px;
    height: 265px;
    padding: 0 15px;
    position: fixed;
    left: calc(50% - 162px);
    top: 3%;
    z-index: 999;
    pointer-events: auto;
    cursor: auto;
    visibility: visible;
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}
ul.modal-content-list, li.modal-line, a.modal-line-link {
    flex-wrap: wrap;
    align-content: space-evenly;
    height: 100%;
}
li.modal-line, a.modal-line-link {
    width: 100%;
    height: auto;
    white-space: nowrap;
}
a.modal-line-link:hover {
    color: var(--white-color);
}
.modal-line-ico {
    margin-right: 17px;
    float: left;
    width: 32px;
    height: 32px;
}
.modal-text-link {
    font-size: 14px;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: 0.1px;
    color: var(--white-color);
    padding: 10px 0;
}
/*modal end*/

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

body {
    -webkit-text-size-adjust: none;
}

/* Variables */

:root {
    --brand-color: #4640f2;
    --modal-color: #6461ff;
    --modal-backdrop: #333333;
    --white-color: #ffffff;
}

/* Box Model */
*,
*:before,
*:after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

/* Containers */
#page-1.container {
    width: 100%;
    display: grid;
    margin-left: auto;
    margin-right: auto;
    grid-template-rows: 2fr 1fr;
    grid-gap: 0rem;
    
}

#page-2.container {
    width: 100%;
    display: grid;
    margin-left: auto;
    margin-right: auto;
    grid-template-rows: 3fr 6fr 96px;
    grid-template-columns: none;
    grid-gap: 0rem;
    
}

body {
    font-family: 'Overpass Mono';
    font-size: 14px;
    font-weight: 400;
    color: var(--white-color);
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: 0px;
}

#main-1 {
    grid-row: 1/2;
    display: grid;
    grid-template-columns: 70% 1fr;
    grid-template-rows: 15% repeat(2, 1fr);
    padding-top: 69px;
    padding-left: 119px;
    padding-right: 97px;
    background: linear-gradient(114deg, rgba(92,91,255, 0.7), 
    rgba(70,64,242, 0.7)), url('../assets/bg-header.svg');
    background-size: cover;
}

#main-2 {
    grid-row: 2/3; 
    padding-left: 119px;
    padding-right: 97px;
}

#header-1 {
    grid-row: 1 / 2;
    grid-column: 1 / -1;
}

.icons-wrapper {
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#header-2 {
    grid-row: 1 / 2;
    grid-column: 1 / -1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 69px;
    padding-left: 119px;
    padding-right: 97px;
    background: linear-gradient(114deg, rgba(92,91,255, 0.7), 
    rgba(70,64,242, 0.7)), url('../assets/bg-header.svg');
    background-size: cover;
}

ul {
    display: flex;
    flex-direction: row;
    list-style: none;
    padding-left: 0;
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
  }
  .logo img {
    width: 222px;
    height: 44px;
  }

  ul.social.icons {
      display: flex;
      justify-content: flex-end;
  }

  ul.social.icons li {
    display: inline-block;
    padding: 0 0 0 3em;
    width: 85px;
  }

h1 {
    font-weight: bold;
    font-size: 56px;
    -webkit-text-stroke: 1px #ffffff;
}
h2 {
    font-size: 20px;
    font-weight: 700;
    color: var(--brand-color);
    margin: 20px 0 20px 0;
  }

.inverse {
    color: var(--white-color);
    font-weight: 600;
 } 

h3 {
    font-size: 14px;
    font-weight: bold;
    color:var(--white-color);
  }  

  span {
    color: var(--brand-color);
    height: auto;
    line-height: 1.75;
  }

section, article {
    height: auto;
}

article {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-top: 48px;
    flex-wrap: wrap;
}

article:last-child {
    margin-bottom: 68px;
}

.content-1 {
    grid-row: 2 / 3;
    grid-column: 1 / 3;
}
.content-1 a button {
    font-weight: 700;
    margin-top: 60px;
}
.content-1 h1 {
    font-weight: bold;
    font-size: 56px;
    -webkit-text-stroke: 1px #ffffff;
}
/*
.content-2 {
    background-color: aquamarine;
    grid-row: 3 / 4;
    grid-column: 1 / 2;

}

.content-3 {
    background-color: aqua;
    grid-row: 2 / 4;
    grid-column: 2 / 3;
}
*/

button {
    -moz-appearance: none;
    -webkit-appearance: none;
    -ms-appearance: none;
    appearance: none;
    outline: 0;
    text-decoration: none;
    text-transform: uppercase;
    cursor: pointer;
    /*font-family: 'Overpass Mono';*/
    font-size: 18px;
    font-weight: 700;
    letter-spacing: 0px;
    color: var(--brand-color);
    width: 245px;
    height: 56px;
    background-color: var(--white-color);
    border-style: none;
    border-radius: 39.5px;
    box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.1);
    padding-top: 0.2em;
    margin: 20px 0 20px 0;
}

button:hover {
    box-shadow: 0 16px 40px 0 rgba(0, 0, 0, 0.2);
    cursor: pointer;  
}

#footer-1 {
    background-color: var(--white-color);
    color: var(--brand-color);
    grid-row: 2 / 3;
    display: grid;
    grid-template-rows: 1fr 96px;
    padding-top: 65px;
}
#footer-2 {
    grid-row: 3 / 4;
}

footer ul {
    height: inherit;
}

.contacts {
    padding-left: 99px;
    padding-right: 97px;
}

.contacts h2 {
    padding-left: 20px;
}

.copyright {
    padding-left: 119px;
    padding-right: 119px; 
}

.contact-info img {
    width: 48px;
    height: 48px;
}

.contact-info {
    display: flex;
    justify-content: space-between;
    margin: 44px auto;
    flex-shrink: 1;
    
}
.contact-info li {
    display: flex;  
    flex-direction: row;
    justify-content: space-around;
    padding: 20px;
}
 .contact-info a {
    /*margin-right: 40px;*/
     white-space: nowrap;
 }

.contact-info a:not(:last-child):hover {
    border-radius: 16px;
    box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.1);
    background-color: var(--white-color);
    cursor: pointer;
}
.contact-info li:last-child {
    white-space: nowrap;
}

li div {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 2px 0 0 20px;
}

div>h3 {
    color: var(--brand-color);
    margin: 0 0 10px;
}

.copyright {
    background: #fafafa;
    color: #959595;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.copyright li {
    width: auto;
    height: auto;
}

a, a:hover {
    text-decoration: none;
    color: var(--brand-color);
  }
.copyright a {
    color: #959595;
}

.copyright li:first-child {
    text-decoration: underline;
}

